# coffea-casa

./: .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MAINTAINERS  MANIFEST.in  README.md  chartpress.yaml  environment.yml  kubernetes.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  worker-spec.yml
.github/: ct.yaml  dependabot.yml
.github/ci/: common
.github/workflows/: autotag.yaml  chart-test.yaml  charts-lint.yml  charts-publish.yml  charts-publish.yml_  charts-test-minikube.yaml  charts-test.yaml  charts-test.yml  ci.yml  deploy.yml  docker-build-test-publish.yaml  dockercd-dev.yml  dockercd-harbor-analysis-cc7.yml  dockercd-harbor-analysis-cc7.yml_disable  dockercd-harbor-analysis.yml  dockercd-harbor-base-cc7.yml  dockercd-harbor-base-cc7.yml_disable  dockercd-harbor-base.yml  dockercd-harbor-cc-cc7.yml  dockercd-harbor-cc-cc7.yml_disable  dockercd-harbor-cc.yml  dockercd-harbor-dask.yml  dockercd-harbor-hub.yml  dockercd-harbor-skyhook-cc7.yml  dockercd-harbor-skyhook-cc7.yml_disable  dockercd-harbor-skyhook.yml  dockercd-tag.yml  dockercd-tag.yml_  dockerci-dask-analysis-cc7.yml  dockerci-dask-analysis-cc7.yml_disable  dockerci-dask-analysis-cc7_disable.yml  dockerci-dask-analysis.yml  dockerci-dask-base-cc7.yml  dockerci-dask-base-cc7.yml_disable  dockerci-dask-base.yml  dockerci-dask-cc-cc7.yml  dockerci-dask-cc-cc7.yml_disable  dockerci-dask-cc-cc7_disable.yml  dockerci-dask-cc.yml  dockerci-dask-skyhook-cc7.yml  (+28 more)
charts/: chartpress.yaml  dev-pebble.yaml  dev-requirements.txt  requirements.txt
charts/coffea-casa/: .helmignore  Chart.yaml  README.md  chartpress.yaml  dev-pebble.yaml  jhub-coffea-casa-values.yaml  jhub-values.yaml  pebble-config.yaml  requirements.txt  schema.yaml  secrets.yaml  servicex-values.yaml  values-dev.yaml  values-prod.yaml  values.yaml
charts/coffea-casa/crds/: traefik-crds.yaml
charts/coffea-casa/docs/: DEVNOTES.md
charts/coffea-casa/templates/: _helpers.tpl  af-secrets.yaml  configmap.yaml  hub-config-d.yaml  hub-extra-config-d.yaml  hub-extra-rbac.yaml  (+2 more)
charts/tests-charts/: test_setup.py
ci/: check-version-skew.sh  common  spawn-test.sh  structure-tests.yaml  values-ci.yaml
coffea-casa-charts/: Chart.yaml  README.md
coffea-casa-charts/templates/: NOTES.txt
coffea_casa/: __init__.py  _version.py  c_c_backup.py  coffea_casa.py  coffea_casa_method.py  config.py  jobqueue-coffea-casa.yaml  plugin.py  remote_debug.py  version.py
coffea_casa/tests/: ca.pem  test_coffeacasa.py
conda/: environment.yml
doc/: api.rst  conf.py  configuration.rst  examples.rst  index.rst  setup.rst
docker/: Dockerfile-python313.cc-analysis-alma9  Dockerfile-python313.cc-analysis-combine-alma9  Dockerfile-python313.cc-dask-alma9  Dockerfile-python313.cc-dask-combine-alma9  Dockerfile.cc-analysis-alma8  Dockerfile.cc-analysis-alma9  Dockerfile.cc-analysis-centos7  Dockerfile.cc-analysis-centos7-skyhook  Dockerfile.cc-analysis-combine-alma9  Dockerfile.cc-analysis-ubuntu  Dockerfile.cc-analysis-ubuntu-skyhook  Dockerfile.cc-base-alma8  Dockerfile.cc-base-centos7  Dockerfile.cc-base-ubuntu  Dockerfile.cc-centos7  Dockerfile.cc-centos7-skyhook  Dockerfile.cc-combine-alma9  Dockerfile.cc-dask-alma8  Dockerfile.cc-dask-alma9  Dockerfile.cc-dask-combine-alma9  Dockerfile.cc-skyhook-centos7  Dockerfile.cc-skyhook-ubuntu  Dockerfile.cc-ubuntu  Dockerfile.cc-ubuntu-skyhook  Dockerfile.haas-alma9  Dockerfile.histserv-alma9  README.IDAP.md  README.md  Untitled.ipynb
docker/ceph/: ceph.conf  keyring
docker/certs/: hcc-flatiron.pem
docker/coffea-casa/: Dockerfile  build-skyhook.sh  ceph.conf  client.admin.keyring  condor_config  dask.yaml  dask_config.yml  distributed-bbockleman.patch  jobqueue-coffea-casa.yaml  kubernetes.yml  labextension.yaml  labextension.yml  prepare-env.sh  prepare-extra-packages.sh  prepare.sh  start.sh  tlsauth.py  uproot_xrd_source.patch
docker/coffea-casa-analysis/: Dockerfile  build-skyhook.sh  coffea_xrd_source.patch  dask.yaml  keyring  prepare-env.sh  supervisord.conf  uproot_xrd_source.patch
docker/coffea-casa-analysis-cc7/: Dockerfile  prepare-env.sh  uproot_xrd_source.patch
docker/coffea-casa-cc7/: Dockerfile  condor_config  dask.yaml  labextension.yaml  prepare-env.sh
docker/coffea-casa-sidecar/: Dockerfile  prepare-env.sh
docker/dask/: dask.yaml  dask_tls.yaml  jobqueue-coffea-casa.yaml  labextension-coffea-casa.yaml  labextension.yaml  labextention_extra.yaml
docker/dask-scheduler/: Dockerfile
docker/env/: casa-analysis.yaml  casa-common.yaml  casa-dask.yaml  casa-flavour-0.7.yaml  casa-flavour-dak.yaml  casa-flavour-full.yaml  casa-flavour-noml.yaml
docker/jupyterhub/: jupyter_server_config.py  jupyterlab-workspace.json  start.sh
docker/k8s-worker/: supervisord.conf
docker/prepare-env/: prepare-env-cc-analysis.sh  prepare-env-cc-base.sh  prepare-env-cc.sh  sitecustomize.py  worker-args.sh
docker/skyhook/: .coffea.toml
docs/: cc_api.rst  cc_condor.rst  cc_configuration.rst  cc_deployment.rst  cc_examples.ipynb  cc_issues.rst  cc_metrics.rst  cc_packages.rst  cc_setup.rst  cc_support.rst  cc_tools.rst  cc_triton.rst  cc_user.rst  cc_user_opendata.rst  cc_user_registration.rst  cc_user_ssl.rst  conf.py  configuration.rst  index.rst  setup.rst
docs/_static/: custom.css
docs/_templates/: breadcrumbs.html  footer.html
docs/gallery/: analysis-casa.ipynb  analysis_tutorial.ipynb  coffea-casa-template.ipynb  example1.ipynb  example2.ipynb  example3.ipynb  example4.ipynb  example5.ipynb  example6.ipynb  example7.ipynb  example8.ipynb  ttbar_HT.ipynb  zpeak_example.ipynb
notebooks/: adl1.ipynb  adl1.py  adl1_scaling.ipynb  adl1_scaling.py  adl1_tls.ipynb  adl1_tls.py  coffea_xcache.ipynb  coffea_xcache.py  parallel-prediction.ipynb  simple_test.ipynb
scripts-extra/: submit_vine_workers_to_condor
tests/: key.pem  test_coffeacasa.py  test_coffeacasa_args.py  test_config.py  test_image_smoke.py  worker-args.bats
tests-charts/: conftest.py  test_hub.py  test_setup.py
tools/: generate-json-schema.py
(+44 files in other folders)
