[build-system]
requires = ["setuptools>=42", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | .eggs
  | build
)/
'''

[tool.mypy]
files = "coffea_casa"
pretty = true
strict = true
strict_equality = true
python_version = "3.7"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
show_error_context = true
no_implicit_optional = true
ignore_missing_imports = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = ['error']

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "coffea_casa/_version.py"
versionfile_build = "coffea_casa/_version.py"
