[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "coffea-casa"
dynamic = ["version", "readme"]
dependencies = ["distributed","dask-jobqueue"]
requires-python = ">=3.8"
license = {file = "LICENSE"}
description = "Wrappers for Dask clusters to be used from coffea-casa AF"
authors = [
  {name = "The Coffea-casa Development Team", email = "coffea-casa-dev@cern.ch"},
]
classifiers =[
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://github.com/CoffeaTeam/coffea-casa"
Documentation = "https://coffea-casa.readthedocs.io/en/latest/"
Repository = "https://github.com/CoffeaTeam/coffea-casa/issues"
"Bug Tracker" = "https://github.com/CoffeaTeam/coffea-casa/issues"

[project.optional-dependencies]
test = [
  "pytest >=7",
]
dev = [
  "pytest >=7",
]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "coffea_casa/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"


[tool.flake8]
ignore = ["E203", "E266", "E501", "W503"]
max-line-length = 88
max-complexity = 18
select = ["B","C","E","F","W","T4","B9"]

[tool.black]
target-version = ["py38", "py39", "py310","py311","py312"]
required-version = "23.10.1"
exclude = '''
/(
   coffea_casa/_version.py
    \.git
  | .eggs
  | build
)/
'''


[tool.mypy]
files = ["coffe_casa", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
  'error',
]
norecursedirs = ["coffe_casa"]
testpaths = ["tests"]
