[metadata]
license-file = LICENSE

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html

# Note: there cannot be spaces after comma's here
exclude = __init__.py
ignore =
    # Extra space in brackets
    E20,
    # Multiple spaces around ","
    E231,E241,
    # Comments
    E26,
    # Import formatting
    E4,
    # Comparing types instead of isinstance
    E721,
    # Assigning lambda expression
    E731,
    # Ambiguous variable names
    E741,
    # Too long lines (still not ready for it)
    E501
max-line-length = 120

[versioneer]
VCS = git
style = pep440
versionfile_source = coffea_casa/_version.py
versionfile_build = coffea_casa/_version.py
tag_prefix =
parentdir_prefix = coffea_casa-

[aliases]
test = pytest

[isort]
default_section=THIRDPARTY
known_first_party=coffea_casa
multi_line_output=4
